--- a/stats/templates/users_stats.html
+++ b/stats/templates/users_stats.html
@@ -6,7 +6,7 @@
     <small class="pull-right"><b>Last updated:</b> <span id="update_date"></span></small>
     <div class="row">
         <div class="col-md-6">
-            <h3>All users</h3>
+            <h3>All</h3>
             <div id="users_stats"></div>
             <p><b>Users count:</b> <span id="users_count"></span></p>
         </div>
@@ -16,9 +16,9 @@
     <script>
         $.getJSON('{% url 'api_users_stats' %}', function (data) {
             c3.generate({
-                bindto: '#users_stats',
-                data: {
-                    json: data['users'],
+                    bindto: '#users_stats',
+                    data: {
+                      json: data['users'],
                       type: 'bar',
                       keys: {
                         x: 'user_type',
@@ -31,7 +31,7 @@
                         type: 'category'
                       }
                     }
-            });
+                  });
             $('#update_date').html(data['update_time']);
             $('#users_count').html(data['users_count']);
         })
