--- a/organizers/templates/application_detail.html
+++ b/organizers/templates/application_detail.html
@@ -181,65 +181,76 @@
     {% elif app and user.is_director %}
         <div class="panel-footer">
 
-            <form action="" method="post">
-                {% csrf_token %}
-                <input type="hidden" name="app_id" value="{{ app.pk }}"/>
-                {% if  app.is_pending %}
-                    <button name="waitlist" class="btn btn-danger btn-block" value="waitlist">
-                        Wait list
+            {% if app.is_blacklisted %}
+                <form action="" method="post">
+                    {% csrf_token %}
+                    <input type="hidden" name="app_id" value="{{ app.pk }}"/>
+                    <textarea name="motive_of_ban" class="form-control" placeholder="Write the motive of ban..."
+                                rows="3"
+                                required></textarea>
+                    <button name="confirm_blacklist" class="btn btn-danger btn-block" value="confirm_blacklist">
+                        Confirm the application as blacklisted
                     </button>
-                    {% if h_dubious_enabled %}
-                        <button name="set_dubious" class="btn btn-warning btn-block" value="set_dubious">
-                            Dubious Application
-                        </button>
-                    {% endif %}
-                    {% if h_blacklist_enabled %}
-                        <button name="set_blacklist" class="btn btn-warning btn-block" value="set_blacklist">
-                            Blacklist Application
-                        </button>
-                    {% endif %}
-                {% endif %}
-                {% if app.can_be_invited %}
-                    <button name="invite" class="btn btn-success btn-block" value="invite">Send invite
-                    </button>
-                {% endif %}
-                {% if app.can_be_cancelled %}
-                    <button name="confirm" class="btn btn-info btn-block" value="confirm">Confirm & send
-                        ticket
-                    </button>
-                    {% if slack_enabled %}
-                        <button name="slack" class="btn btn-default btn-block" value="slack">Send slack
-                            invite
-                        </button>
-                    {% endif %}
-                    <button name="cancel" class="btn btn-danger btn-block" value="cancel">Cancel
-                    </button>
-                {% endif %}
-                {% if app.is_blacklisted %}
+                </form>
+                <form action="" method="post">
+                    {% csrf_token %}
+                    <input type="hidden" name="app_id" value="{{ app.pk }}"/>
                     <button name="unset_blacklist" class="btn btn-success btn-block" value="unset_blacklist">Mark as not
                         blacklisted
                     </button>
-                    <button name="confirm_blacklist" class="btn btn-danger btn-block" value="confirm_blacklist">Confirm the application 
-                        as blacklisted
-                    </button>
-                {% endif %}
-                {% if app.is_dubious and app.contacted and app.contacted_by == request.user %}
-                    <button name="unset_dubious" class="btn btn-success btn-block" value="unset_dubious">Mark as not
-                        dubious
-                    </button>
-                    <button name="invalidate" class="btn btn-danger btn-block" value="invalidate">Mark as invalid
-                    </button>
-                {% elif app.is_dubious and app.contacted %}
-                    <button name="invalidate" class="btn btn-default btn-block" disabled value="invalidate">Application
-                        under review by {{ app.contacted_by }}
-                    </button>
-                {% elif not app.contacted and app.is_dubious %}
-                    <button name="contact_user" class="btn btn-success btn-block" value="contact_user">Mark as contacted
-                    </button>
-                {% endif %}
-
-
-            </form>
+                </form>
+            {% else %}
+                <form action="" method="post">
+                    {% csrf_token %}
+                    <input type="hidden" name="app_id" value="{{ app.pk }}"/>
+                    {% if  app.is_pending %}
+                        <button name="waitlist" class="btn btn-danger btn-block" value="waitlist">
+                            Wait list
+                        </button>
+                        {% if h_dubious_enabled %}
+                            <button name="set_dubious" class="btn btn-warning btn-block" value="set_dubious">
+                                Dubious Application
+                            </button>
+                        {% endif %}
+                        {% if h_blacklist_enabled %}
+                            <button name="set_blacklist" class="btn btn-warning btn-block" value="set_blacklist">
+                                Blacklist Application
+                            </button>
+                        {% endif %}
+                    {% endif %}
+                    {% if app.can_be_invited %}
+                        <button name="invite" class="btn btn-success btn-block" value="invite">Send invite
+                        </button>
+                    {% endif %}
+                    {% if app.can_be_cancelled %}
+                        <button name="confirm" class="btn btn-info btn-block" value="confirm">Confirm & send
+                            ticket
+                        </button>
+                        {% if slack_enabled %}
+                            <button name="slack" class="btn btn-default btn-block" value="slack">Send slack
+                                invite
+                            </button>
+                        {% endif %}
+                        <button name="cancel" class="btn btn-danger btn-block" value="cancel">Cancel
+                        </button>
+                    {% endif %}
+                    
+                    {% if app.is_dubious and app.contacted and app.contacted_by == request.user %}
+                        <button name="unset_dubious" class="btn btn-success btn-block" value="unset_dubious">Mark as not
+                            dubious
+                        </button>
+                        <button name="invalidate" class="btn btn-danger btn-block" value="invalidate">Mark as invalid
+                        </button>
+                    {% elif app.is_dubious and app.contacted %}
+                        <button name="invalidate" class="btn btn-default btn-block" disabled value="invalidate">Application
+                            under review by {{ app.contacted_by }}
+                        </button>
+                    {% elif not app.contacted and app.is_dubious %}
+                        <button name="contact_user" class="btn btn-success btn-block" value="contact_user">Mark as contacted
+                        </button>
+                    {% endif %}
+                </form>
+            {% endif %}
         </div>
     {% elif app and app.is_dubious and user.can_review_dubious and not user.is_director and h_dubious_enabled %}
         <div class="panel-footer">
@@ -271,12 +282,18 @@
             <form action="" method="post">
                 {% csrf_token %}
                 <input type="hidden" name="app_id" value="{{ app.pk }}"/>
-
+                <textarea name="motive_of_ban" class="form-control" placeholder="Write the motive of ban..."
+                            rows="3"
+                            required></textarea>
+                <button name="confirm_blacklist" class="btn btn-danger btn-block" value="confirm_blacklist">
+                    Confirm the application as blacklisted
+                </button>
+            </form>
+            <form action="" method="post">
+                {% csrf_token %}
+                <input type="hidden" name="app_id" value="{{ app.pk }}"/>
                 <button name="unset_blacklist" class="btn btn-success btn-block" value="unset_blacklist">Mark as not
                     blacklisted
-                </button>
-                <button name="confirm_blacklist" class="btn btn-danger btn-block" value="confirm_blacklist">Confirm the application 
-                    as blacklisted
                 </button>
             </form>
         </div>
