--- a/organizers/templates/other_application_detail.html
+++ b/organizers/templates/other_application_detail.html
@@ -81,6 +81,7 @@
                     {% include 'include/field.html' with desc='Fisrt hack?' value=app.first_timer|yesno %}
                     {% include 'include/field.html' with desc='Experienced mentor?' value=app.first_time_mentor|yesno %}
                     {% include 'include/field.html' with desc='Which hackathons' value=app.which_hack %}
+                    {% include 'include/field.html' with desc='Other events' value=app.participated %}
                     {% include 'include/field.html' with desc='Attendance' value=app.attendance %}
                     {% include 'include/field.html' with desc='Motivation' value=app.why_mentor %}
                     <hr>
@@ -90,7 +91,6 @@
                     <dd></dd>
                     {% include 'include/field.html' with desc='Fluent languages' value=app.fluent %}
                     {% include 'include/field.html' with desc='Experienced languages' value=app.experience %}
-                    {% include 'include/field.html' with desc='Projects' value=app.projects %}
                     {% include 'include/field.html' with desc='English Level' value=app.english_level %}
                     {% if app.resume %}
                       {% include 'include/field.html' with desc='Resume' value='<a href="'|add:app.resume.url|add:'" target="_blank">'|add:app.resume.name|add:"</a>"|safe %}
