Mentor applications can be moved back to in review once invited or rejected.

--- a/organizers/templates/other_application_detail.html
+++ b/organizers/templates/other_application_detail.html
@@ -133,10 +133,14 @@
             <form action="" method="post">
                 {% csrf_token %}
                 <input type="hidden" name="app_id" value="{{ app.pk }}"/>
-                {% if not app.is_invited %}
+                {% if app.is_pending %}
                 <button name="invite" class="btn btn-success btn-block" value="invite">Invite</button>
+                <button name="noinvite" class="btn btn-danger btn-block" value="noinvite">Reject</button>
+                {% elif app.is_invited %}
+                <button name="cancel_invite" class="btn btn-danger btn-block" value="cancel_invite">Cancel invitation</button>
+                {% elif app.is_rejected %}
+                <button name="cancel_invite" class="btn btn-danger btn-block" value="cancel_invite">Move back to review</button>
                 {% endif %}
-                <button name="noinvite" class="btn btn-danger btn-block" value="noinvite">Don't invite</button>
             </form>
         </div>
 
