--- a/checkin/templates/checkin/hacker.html
+++ b/checkin/templates/checkin/hacker.html
@@ -5,7 +5,13 @@
     <dl class="dl-horizontal">
         {% include 'include/field.html' with desc='Lenny face' value=app.lennyface %}
         {% include 'include/field.html' with desc='Type' value=app.user.get_type_display %}
-        {% include 'include/field.html' with desc='Name' value=app.user.name %}
+        {% if app.user.is_sponsor %}
+            {% include 'include/field.html' with desc='Name' value=app.name %}
+            {% include 'include/field.html' with desc='Company' value=app.user.name %}
+        {% else %}
+            {% include 'include/field.html' with desc='Name' value=app.user.name %}
+        {% endif %}
+
         {% include 'include/field.html' with desc='Email' value=app.user.email %}
         {% include 'include/field.html' with desc='Shirt Size' value=app.tshirt_size %}
         {% include 'include/field.html' with desc='Diet' value=app.diet %}
